<resources>
    <string name="app_name">PocketMessenger</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_login">Логин / Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_repassword">Повторите пароль</string>
    <string name="button_login">Войти</string>
    <string name="button_register">NEW USER</string>
    <string name="button_newuser">CREATE</string>

    <string name="my_profile">Мой профиль</string>
    <string name="contacts">Контакты</string>
    <string name="support">Поддержка</string>
    <string name="about">О приложении</string>
    <string name="logout">Logout</string>

    <string name="hint_enter_a_message">Введите сообщение</string>
    <string name="enter_login">Введие логин</string>
    <string name="enter_password">Введие пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="cancel">Отмена</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="chat_fragment">chat_fragment</string>
    <string name="contacts_fragment">contacts_fragment</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="add">ADD</string>
    <string name="add_chatroom">Create ChatRoom</string>
    <string name="enter_chatroom_name_here">Enter ChatRoom name here</string>
    <string name="empty_email">Incorrect email!</string>
    <string name="contact_added">Contact successfully added!</string>
    <string name="create">Create</string>
    <string name="chatroom_name_empty">ChatRoom name is Empty!</string>


</resources>
