<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_white_24dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/about" />
    </group>
    <group
        android:id="@+id/nav_logout_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_redo_white_24dp"
            android:title="@string/logout" />
    </group>
</menu>
